endpoint all movies
